cloudformation/prd/cfn-app-prd-vpc.yaml
---
AWSTemplateFormatVersion: 2010-09-09

Parameters:
  Name:
    Type: String
    Default: pathways-dev-vpc

  VpcCIDR:
    Type: String
    Default: 10.215.0.0/16

  Subnet1CIDR:
    Type: String
    Default: 10.215.10.0/24

  Subnet2CIDR:
    Type: String
    Default: 10.215.20.0/24

  Subnet3CIDR:
    Type: String
    Default: 10.215.30.0/24

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      Tags:
        - Key: Name
          Value: !Ref Name

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref Name

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  NATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
         Fn::GetAtt:
         - SubnetEIP
         - AllocationId
      SubnetId:
         Ref: Subnet3

  SubnetEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  Subnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs ]
      MapPublicIpOnLaunch: true
      CidrBlock: !Ref Subnet1CIDR
      Tags:
        - Key: Name
          Value: !Sub ${Name} (Public)

  Subnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs ]
      MapPublicIpOnLaunch: true
      CidrBlock: !Ref Subnet2CIDR
      Tags:
        - Key: Name
          Value: !Sub ${Name} (Public)

  Subnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs ]
      MapPublicIpOnLaunch: false
      CidrBlock: !Ref Subnet3CIDR
      Tags:
        - Key: Name
          Value: !Sub ${Name} (Private)

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Ref Name

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Ref Name

  DefaultRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway

  Subnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref Subnet1

  Subnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref Subnet2

  Subnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref Subnet3

  VpcCIDRSsmParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub ${Name}-cidr
      Type: String
      Value: !Ref VPC
      Description: Creating an SSM parameter for VpcId.
      Tags:
        EnvironmentInstance: !Ref Name

  VpcIdSsmParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub ${Name}-id
      Type: String
      Value: !Ref VPC
      Description: Creating an SSM parameter for VpcId.
      Tags:
        EnvironmentInstance: !Ref Name

  SubnetsSsmParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub ${Name}-subnets
      Type: String
      Value: !Join [ ",", [ !Ref Subnet1, !Ref Subnet2 ] ]
      Description: Creating an SSM parameter for Subnets.
      Tags:
        EnvironmentInstance: !Ref Name

Outputs:
  VpcId:
    Value: !Ref VPC
    Export: { "Name" : !Join ['', [!Ref Name, '-', 'id']] }
  Subnets:
    Value: !Join [ ",", [ !Ref Subnet1, !Ref Subnet2 ] ]
    Export: { "Name" : !Join ['', [!Ref Name, '-', 'subnets']] }
  VpcSecurityGroup:
    Value: { "Fn::GetAtt" : ["VPC", "DefaultSecurityGroup"] } 
    Export: { "Name" : !Join ['', [!Ref Name, '-', 'sec-grp']] }
  #VpcCIDR:
  #  Value: 
  #  Export:
